--- a/src/engine/tools/vagrant/Vagrantfile
+++ b/src/engine/tools/vagrant/Vagrantfile
@@ -137,7 +137,7 @@ Vagrant.configure("2") do |config|
         engine-integration add -p wazuh-core/
         engine-integration add -p integrations/syslog/
         engine-integration add -p integrations/system/
-        engine-integration add -p integrations/windows/
+        #engine-integration add -p integrations/windows/
         engine-integration add -p integrations/apache-http/
         engine-integration add -p integrations/suricata/
         cd $HOME
