--- a/src/engine/ruleset/integrations/windows/decoders/windows-security.yml
+++ b/src/engine/ruleset/integrations/windows/decoders/windows-security.yml
@@ -16,7 +16,7 @@ metadata:
 parents:
   - decoder/windows-event-decoder/0
 
-check: ~windows.System.Channel.#text==Security AND (event.provider==Microsoft-Windows-Security-Auditing OR event.provider==Microsoft-Windows-Eventlog)
+check: $~windows.System.Channel.#text==Security AND ( $event.provider==Microsoft-Windows-Security-Auditing OR $event.provider==Microsoft-Windows-Eventlog )
 
 normalize:
 
@@ -57,8 +57,8 @@ normalize:
     - service.type: kvdb_get(windows-service-type,$~windows.EventData.ServiceType)
 
     # Set Audit Information -> "SubcategoryGuid": "{0cce9243-69ae-11d9-bed3-505054503030}"
-    - ~windows.EventData.SubcategoryGuid: replace({,)
-    - ~windows.EventData.SubcategoryGuid: replace(},)
+    - ~windows.EventData.SubcategoryGuid: replace({, )
+    - ~windows.EventData.SubcategoryGuid: replace(}, )
     - ~windows.EventData.SubcategoryGuid: upcase($~windows.EventData.SubcategoryGuid)
     - _AuditAsset: kvdb_get(windows-audit-information,$~windows.EventData.SubcategoryGuid)
     - ~winlog.AuditCategory: $_AuditAsset/1
@@ -69,16 +69,16 @@ normalize:
   # Failure reason for logon
  - check: exists($~windows.EventData.FailureReason)
    map:
-    - ~windows.EventData.FailureReason: replace(%%,)
+    - ~windows.EventData.FailureReason: replace(%%, )
     - event.action: logon failed
     - event.reason: kvdb_get(windows-messages,$~windows.EventData.FailureReason # Possible ECS -> failure code)
 
   # Set Audit Policy Changes Descriptions
  - check: exists($~windows.EventData.AuditPolicyChanges)
    map:
-     - ~winlog.AuditPolicyChanges: replace(%%,)
+     - ~winlog.AuditPolicyChanges: replace(%%, )
      - ~winlog.AuditPolicyChanges: replace(\, ,\,)
-     - ~winlog.policy_changes: split($~winlog.AuditPolicyChanges,\,,)
+     - ~winlog.policy_changes: split($~winlog.AuditPolicyChanges,\,)
 
  - check: exists($~winlog.policy_changes) AND is_not_array($~winlog.policy_changes)
    map:
@@ -93,12 +93,12 @@ normalize:
   # Set Access List Descripitions
  - check: exists($~windows.EventData.AccessList)
    map:
-     - ~windows.EventData.AccessList: replace(%%,)
-     - ~winlog.AccessList: split($~windows.EventData.AccessList, )
+     - ~windows.EventData.AccessList: replace(%%, )
+     - ~winlog.AccessList: split($~windows.EventData.AccessList,  )
 
  - check: exists($~winlog.AccessList) AND is_not_array($~winlog.AccessList)
    map:
-     - ~winlog.AccessListDescription: kvdb_get('windows-messages', _access_list)
+     - ~winlog.AccessListDescription: kvdb_get(windows-messages, _access_list)
 
 #  - check: exists(~winlog.AccessList) AND is_array(~winlog.AccessList)
 #    map:
@@ -111,13 +111,13 @@ normalize:
  - map:
     - _split_AccesMasks: replace(%%,%)
     - _split_AccesMasks: split($~windows.EventData.AccesMask,%)
-    - ~wilog.AccessMaskDescription: $_split_AccesMasks
+    - ~winlog.AccessMaskDescription: $_split_AccesMasks
   # Set Access Mask Descriptions
-  # - ~wilog.AccessMaskDescription/0 - /1 - /2
+  # - ~winlog.AccessMaskDescription/0 - /1 - /2
   #TODO: For each of the above mapping apply matchBitsHelper
 
   # Conditional Logon
- - check: event.code=="4625" OR event.code=="4776"
+ - check: $event.code=="4625" OR $event.code=="4776"
    map:
     # windows.logon.failure.status
     # windows.logon.failure.sub_status
@@ -166,7 +166,7 @@ normalize:
    map:
     - user.target.name: $~windows.EventData.TargetUserName
 
- - check: string_not_equal/~windows.EventData.TargetUserName/- AND array_contains(_IdTargetUserArray,$event.code) AND string_not_equal/~windows.EventData.TargetUserName/-
+ - check: string_not_equal($~windows.EventData.TargetUserName,-) AND array_contains($_IdTargetUserArray,$event.code) AND string_not_equal($~windows.EventData.TargetUserName,-)
    map:
     - related.user: array_append($~windows.EventData.TargetUserName)
 
@@ -185,29 +185,29 @@ normalize:
     - _IdMemberName: array_contains($event.code)
    map:
     - _split_memberName: split($~windows.EventData.MemberName,\,)
-    - _split_memberName.0: replace(CN=,)
-    - _split_memberName.0: replace(cn=,)
-    - _split_memberName.3: replace(DC=,)
-    - _split_memberName.3: replace(dc=,)
+    - _split_memberName.0: replace(CN=, )
+    - _split_memberName.0: replace(cn=, )
+    - _split_memberName.3: replace(DC=, )
+    - _split_memberName.3: replace(dc=, )
     - user.target.name: $_split_memberName.0
     - user.target.domain: $_split_memberName.3
     - related.user: array_append($_split_memberName.0)
 
- - check: array_contains($_IdMemberName/$event.code) AND not_exists(group.id)
+ - check: array_contains($_IdMemberName,$event.code) AND not_exists(group.id)
    map:
     - user.target.id: $~windows.EventData.TargetSid
     - group.id: $~windows.EventData.TargetUserSid
 
- - check: array_contains($_IdMemberName/$event.code) AND not_exists(group.name)
+ - check: array_contains($_IdMemberName,$event.code) AND not_exists(group.name)
    map:
-    - ~windows.EventData.TargetDomainName: replace(DC=,)
-    - ~windows.EventData.TargetDomainName: replace(dc=,)
+    - ~windows.EventData.TargetDomainName: replace(DC=, )
+    - ~windows.EventData.TargetDomainName: replace(dc=, )
     - group.name: $~windows.EventData.TargetUserName
 
- - check: array_contains($_IdMemberName/$event.code) AND not_exists(group.domain)
+ - check: array_contains($_IdMemberName,$event.code) AND not_exists(group.domain)
    map:
-    - ~windows.EventData.TargetDomainName: replace(DC=,)
-    - ~windows.EventData.TargetDomainName: replace(dc=,)
+    - ~windows.EventData.TargetDomainName: replace(DC=, )
+    - ~windows.EventData.TargetDomainName: replace(dc=, )
     - group.domain: $~windows.EventData.TargetDomainName
 
  - check: exists($user.target)
@@ -217,7 +217,7 @@ normalize:
     - user.target.group.domain: $group.domain
 
 # Computer Object # TODO -> Pending example events
- - check: event.code=="4741" OR event.code=="4742" OR event.code=="4743"
+ - check: $event.code=="4741" OR $event.code=="4742" OR $event.code=="4743"
    map:
     #possible ECS user.target.id
     - ~winlog.computerObject.id: $~windows.EventData.TargetSid
@@ -227,7 +227,7 @@ normalize:
     - ~winlog.computerObject.domain: $~windows.EventData.TargetDomainName
 
 # Logon ID
- - check: event.code=="4634" OR event.code=="4647" OR event.code=="4964"
+ - check: $event.code=="4634" OR $event.code=="4647" OR $event.code=="4964"
    map:
     - ~winlog.logon.id: $~windows.EventData.TargetLogonId # Possible ECS -> user.id
 
@@ -262,17 +262,17 @@ normalize:
    map:
     - user.effective.id: $~windows.EventData.TargetUserSid
 
- - check: (event.code=="4648" OR event.code=="4688") AND string_not_equal(~windows.EventData.TargetUserName,-)
+ - check: ( $event.code=="4648" OR $event.code=="4688" ) AND string_not_equal(~windows.EventData.TargetUserName,-)
    map:
     - _name_part: split($~windows.EventData.TargetUserName,@)
     - user.effective.name: $_name_part.0
 
- - check: (event.code=="4648" OR event.code=="4688") AND string_not_equal(~windows.EventData.TargetDomainName,-)
+ - check: ( $event.code=="4648" OR $event.code=="4688" ) AND string_not_equal(~windows.EventData.TargetDomainName,-)
    map:
     - user.effective.domain: $~windows.EventData.TargetDomainName
 
  # Set Subject User for event 1102
- - check: event.code=="1102"
+ - check: $event.code=="1102"
    map:
     - user.id: $~windows.UserData.LogFileCleared.SubjectUserSid.#text
     - user.name: $~windows.UserData.LogFileCleared.SubjectUserName.#text
@@ -301,7 +301,7 @@ normalize:
  # Normalize event 4688
  - check: $event.code=="4688"
    map:
-    - process.args: split($~windows.EventData.CommandLine, )
+    - process.args: split($~windows.EventData.CommandLine,  )
     - process.pid: hex_to_number($~windows.EventData.NewProcessId)
     - process.executable: $~windows.EventData.NewProcessName
     - _file_data: parse_file($~windows.EventData.NewProcessName)
@@ -311,18 +311,18 @@ normalize:
     - _file_data: parse_file($~windows.EventData.ParentProcessName)
     - process.parent.name: $_file_data.name
     - process.command_line: $~windows.EventData.CommandLine
- - check: event.code=="4688" AND string_not_equal($~windows.EventData.TargetUserName,-)
+ - check: $event.code=="4688" AND string_not_equal($~windows.EventData.TargetUserName,-)
    map:
     - related.user: array_append($~windows.EventData.TargetUserName)
 
  #Related Users
  - map:
-    - _id_related_user: kvdb_get(windows-events-arrays,related_users_2)
+    - _id_related_user: kvdb_get(windows-events-arrays,related_user_2)
  - check: array_contains($_id_related_user,$event.code)
    map:
     - related.user: array_append($~windows.EventData.SubjectUserName)
  - map:
-    - _id_related_user: kvdb_get(windows-events-arrays,related_users_1)
+    - _id_related_user: kvdb_get(windows-events-arrays,related_user_1)
  - check: array_contains($_id_related_user,$event.code)
    map:
     - related.user: array_append($~windows.EventData.TargetUserName)
@@ -338,7 +338,7 @@ normalize:
     - related.user: array_append($~windows.EventData.NewTargetUserName)
 
   # TODO - Object Policy Change and SidListDesc (lines 3093 to 3459)
- - check: event.code=="4670" OR event.code=="4817" OR event.code=="4907" OR event.code=="4808"
+ - check: $event.code=="4670" OR $event.code=="4817" OR $event.code=="4907" OR $event.code=="4808"
    map:
     - ~winlog.NewSecurityDescriptor: $~windows.EventData.NewSd
     - ~winlog.OldSecurityDescriptor: $~windows.EventData.OldSd
@@ -350,9 +350,9 @@ normalize:
     - _privilege_list: kvdb_get(windows-events-arrays,privilege_list)
  - check: array_contains($_privilege_list,$event.code)
    map:
-   - ~windows.EventData.PrivilegeList: replace(/     / )
-   - ~winlog.User_PrivilegeList: split($~windows.EventData.PrivilegeList, )
+   - ~windows.EventData.PrivilegeList: replace(     ,  )
+   - ~winlog.User_PrivilegeList: split($~windows.EventData.PrivilegeList,  )
 
   #cleanup
  - map:
-    - ~windows: delete()
+   - ~windows: delete()
