--- a/src/engine/ruleset/integrations/windows/decoders/windows-sysmon.yml
+++ b/src/engine/ruleset/integrations/windows/decoders/windows-sysmon.yml
@@ -22,14 +22,14 @@ check:
 
 normalize:
  - map:
-    - wazuh.decoders: +array_append/windows-sysmon
+    - wazuh.decoders: array_append(windows-sysmon)
     - event.dataset: sysmon
     - event.kind: event
 
     # Add categorization fields
     - rule.name: $~windows.EventData.RuleName
     - event.hash: $~windows.EventData.Hash
-    - ~temp.hashes: +parse_key_value/$~windows.EventData.Hashes/=/,/'/'
+    - ~temp.hashes: parse_key_value($~windows.EventData.Hashes, =, \,, ', ')
     - related.hash: $~temp.hashes
 
 
@@ -49,12 +49,12 @@ normalize:
     - process.parent.pid: $~windows.EventData.ParentProcessId
     - process.parent.executable: $~windows.EventData.ParentImage
     - process.parent.command_line: $~windows.EventData.ParentCommandLine
-    - ~temp.file_data: +parse_file/$process.executable
+    - ~temp.file_data: parse_file($process.executable)
     - process.name: $~temp.file_data.name
-    - ~temp.file_data: +parse_file/$process.parent.executable
+    - ~temp.file_data: parse_file($process.parent.executable)
     - process.parent.name: $~temp.file_data.name
-    - process.args: '+split/$process.command_line/ '
-    - process.parent.args: '+split/$process.parent.command_line/ '
+    - process.args: split($process.command_line,  )
+    - process.parent.args: split($process.parent.command_line,  )
 
 
   ## File fields
@@ -64,7 +64,7 @@ normalize:
     - file.path: $~windows.EventData.ImageLoaded
     - file.code_signature.subject_name: $~windows.EventData.Signature
     - file.code_signature.status: $~windows.EventData.SignatureStatus
-    - ~temp.file_data: +parse_file/$file.path
+    - ~temp.file_data: parse_file($file.path)
     - file.directory: $~temp.file_data.path
     - file.extension: $~temp.file_data.ext
     - file.name: $~temp.file_data.name
@@ -83,13 +83,13 @@ normalize:
 
   ## User fields
     - user.id: $~windows.System.Security.@UserID
-    - ~temp.user_parts: +split/$~windows.EventData.User/\
+    - ~temp.user_parts: split($~windows.EventData.User, \)
     - user.domain: $~temp.user_parts.0
     - user.name: $~temp.user_parts.1
 
   ## Related fields
-    - related.user: +array_append/$user.name
-    - related.ip: +array_append/$~windows.EventData.NewTargetUserName
+    - related.user: array_append($user.name)
+    - related.ip: array_append($~windows.EventData.NewTargetUserName)
 
 
  - check: $event.code=="255"
@@ -100,7 +100,7 @@ normalize:
    map:
     - message: $~windows.EventData.Type
 
- - check: +string_not_equal/$event.code/7
+ - check: string_not_equal($event.code,7)
    map:
    - process.pe.original_file_name: $~windows.EventData.OriginalFileName
    - process.pe.company: $~windows.EventData.Company
@@ -141,47 +141,47 @@ normalize:
    map:
     - network.type: ipv4
 
- - check: $event.code=="1" OR $event.code=="23"  OR $event.code=="24" OR $event.code=="25" OR $event.code=="26"
+ - check: $event.code=="1" OR $event.code=="23" OR $event.code=="24" OR $event.code=="25" OR $event.code=="26"
    map:
     - process.hash: $~temp.hashes
 
- - check: $event.code=="6" OR $event.code=="7"  OR $event.code=="15"
+ - check: $event.code=="6" OR $event.code=="7" OR $event.code=="15"
    map:
     - file.hash: $~temp.hashes
     - file.pe.imphash: file.hash.imphash
 
   ## Registry fields
- - check: $event.code=="12" OR $event.code=="13"  OR $event.code=="14"
+ - check: $event.code=="12" OR $event.code=="13" OR $event.code=="14"
    map:
     - registry.path: $~windows.EventData.TargetObject
-    - ~temp.registry.array: +split/$registry.path/\\
+    - ~temp.registry.array: split($registry.path, \)
     - registry.hive: $~temp.registry.array.0
-    - ~temp.registry.array.0: +delete
-    - registry.key: +join/$~temp.registry.array/\\
-    - registry.value: +regex_extract/$registry.path/^.*\\\\(.*)$
+    - ~temp.registry.array.0: delete()
+    - registry.key: join($~temp.registry.array, \\)
+    - registry.value: regex_extract($registry.path, ^.*\\\\(.*)$)
 
- - check: ($event.code=="12" OR $event.code=="13"  OR $event.code=="14") AND +starts_with/$~windows.Event.EventData.Details/QWORD
+ - check: ( $event.code=="12" OR $event.code=="13" OR $event.code=="14" ) AND starts_with($~windows.Event.EventData.Details,QWORD)
    map:
     - registry.data.type: SZ_QWORD
-    - registry.data.strings: +regex_extract/$~windows.EventData.Details/^QWORD\s*\((0x[0-9A-F]+-0x[0-9A-F]+)\)
+    - registry.data.strings: regex_extract($~windows.EventData.Details, ^QWORD\s*\((0x[0-9A-F]+-0x[0-9A-F]+)\))
 
- - check: ($event.code=="12" OR $event.code=="13"  OR $event.code=="14") AND +starts_with/$~windows.EventData.Details/DWORD
+ - check: ( $event.code=="12" OR $event.code=="13" OR $event.code=="14" ) AND starts_with($~windows.EventData.Details,DWORD)
    map:
     - registry.data.type: SZ_DWORD
-    - ~temp.value: +regex_extract/$~windows.EventData.Details/DWORD \((0x[0-9A-F]{8})\)
-    - registry.data.strings: +hex_to_number/$~temp.value
+    - ~temp.value: regex_extract($~windows.EventData.Details, DWORD \((0x[0-9A-F]{8})\))
+    - registry.data.strings: hex_to_number($~temp.value)
 
  - check:
-    - ~windows.EventData.Details: +starts_with/Binary Data
+    - ~windows.EventData.Details: starts_with(Binary Data)
    map:
-    - ~temp.is_binary_data: True
+    - ~temp.is_binary_data: true
 
- - check:  ($event.code=="12" OR $event.code=="13"  OR $event.code=="14") AND +is_true/$~temp.is_binary_data
+ - check:  ( $event.code=="12" OR $event.code=="13" OR $event.code=="14" ) AND is_true($~temp.is_binary_data)
    map:
     - registry.data.type: REG_BINARY
     - registry.data.strings: $~windows.EventData.Details
 
 # Cleanup
  - map:
-   - ~temp: +delete
-   - ~windows: +delete
+   - ~temp: delete()
+   - ~windows: delete()
