--- a/src/engine/ruleset/default-policy.yml
+++ b/src/engine/ruleset/default-policy.yml
@@ -6,4 +6,4 @@ integrations:
   - integration/syslog/0
   - integration/system/0
   - integration/wazuh-core/0
-  # - integration/windows/0
+  - integration/windows/0
