--- a/src/engine/ruleset/integrations/windows/manifest.yml
+++ b/src/engine/ruleset/integrations/windows/manifest.yml
@@ -3,6 +3,6 @@ decoders:
 - decoder/windows-json/0
 - decoder/windows-security/0
 - decoder/windows-powershell-operational/0
-- decoder/windows-event-decoder/0
+- decoder/windows-event/0
 - decoder/windows-powershell/0
 - decoder/windows-sysmon/0
