Received timestamp for tcp connections now is saved for each agents messages. When the connection is idle, it's closed and the new one is acepted.

--- a/etc/internal_options.conf
+++ b/etc/internal_options.conf
@@ -222,6 +222,9 @@ remoted.send_buffer_size=131072
 # Sleep time to retry delivery to a client in TCP (seconds) [1..60]
 remoted.send_timeout_to_retry=1
 
+# Time to consider a connection down with a client in TCP when a colision hapens.(seconds) [10..3600]
+remoted.connection_overtake_time=60
+
 # Deallocate network buffers after usage.
 # 0. Do not deallocate memory.
 # 1. Shrink memory to the reception chunk.
