Fix github it workflows

--- a/.github/workflows/integration-tests-execd-tier-0-1-win.yml
+++ b/.github/workflows/integration-tests-execd-tier-0-1-win.yml
@@ -1,4 +1,4 @@
-name: Execd integration tests tier 0 and 1 on Windows
+name: Integration tests for Execd on Windows - Tier 0 and 1
 
 on:
   workflow_dispatch:
