--- a/.github/workflows/integration-tests-execd-tier-0-1-lin.yml
+++ b/.github/workflows/integration-tests-execd-tier-0-1-lin.yml
@@ -1,4 +1,4 @@
-name: Execd integration tests tier 0 and 1 on Linux
+name: Integration tests for Execd on Linux - Tier 0 and 1
 
 on:
   workflow_dispatch:
