--- a/.github/workflows/integration-tests-github-tier-0-1-win.yml
+++ b/.github/workflows/integration-tests-github-tier-0-1-win.yml
@@ -1,10 +1,10 @@
-name: GitHub integration tests tier 0 and 1 on Windows
+name: Integration tests for GitHub on Windows - Tier 0 and 1
 
 on:
   workflow_dispatch:
   pull_request:
     paths:
-        - ".github/workflows/integration-tests-github-tier-0.yml"
+        - ".github/workflows/integration-tests-github-tier-0-1-win.yml"
         - "src/wazuh_modules/wm_github.h"
         - "src/wazuh_modules/wm_github.c"
         - "src/Makefile"
