--- a/etc/internal_options.conf
+++ b/etc/internal_options.conf
@@ -223,6 +223,7 @@ remoted.send_buffer_size=131072
 remoted.send_timeout_to_retry=1
 
 # Time to consider a connection down with a client in TCP when a colision hapens.(seconds) [10..3600]
+# 0 means feature disabled. Never consider a connection down.
 remoted.connection_overtake_time=60
 
 # Deallocate network buffers after usage.
