--- a/src/data_provider/tests/CMakeLists.txt
+++ b/src/data_provider/tests/CMakeLists.txt
@@ -32,7 +32,9 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
   add_subdirectory(sysInfoNetworkWindows)
 endif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 
-add_subdirectory(sysInfoPackages)
+if(HAS_FILESYSTEM OR CMAKE_SYSTEM_NAME STREQUAL "Windows")
+  add_subdirectory(sysInfoPackages)
+endif()
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   string(APPEND CMAKE_EXE_LINKER_FLAGS " -fprofile-arcs ")
