Rebase with master branch

--- a/src/shared_modules/content_manager/CMakeLists.txt
+++ b/src/shared_modules/content_manager/CMakeLists.txt
@@ -23,13 +23,13 @@ include_directories(${SRC_FOLDER}/external/curl/include/curl)
 include_directories(${SHARED_MODULES})
 include_directories(${SHARED_MODULES}/utils)
 include_directories(${SHARED_MODULES}/router/include)
-include_directories(${SHARED_MODULES}/wazuh-http-request/include)
+include_directories(${SHARED_MODULES}/http-request/include)
 include_directories(${SHARED_MODULES}/content_manager/src/components)
 
 # Link directories
 link_directories(${SRC_FOLDER}/external/curl/lib/.libs)
 link_directories(${SHARED_MODULES}/router/build)
-link_directories(${SHARED_MODULES}/wazuh-http-request/build)
+link_directories(${SHARED_MODULES}/http-request/build)
 
 file(GLOB CONTENT_DOWNLOAD_SRC
     "src/*.cpp"
