--- a/src/shared_modules/indexer_connector/CMakeLists.txt
+++ b/src/shared_modules/indexer_connector/CMakeLists.txt
@@ -26,10 +26,14 @@ include_directories(${SHARED_MODULES}/utils)
 include_directories(${SHARED_MODULES}/common)
 include_directories(${SHARED_MODULES}/http-request/include)
 
+# Compile dependencies
+add_subdirectory(${SHARED_MODULES}/http-request http-request)
+
 # Link directories
 link_directories(${SRC_FOLDER})
 link_directories(${SRC_FOLDER}/external/rocksdb/build)
 link_directories(${SHARED_MODULES}/http-request/build)
+link_directories(${SRC_FOLDER}/external/curl/lib/.libs)
 
 file(GLOB INDEXER_CONNECTOR_SRC
     "src/*.cpp"
