Remove benchmark tests from scan-build analysis.

--- a/src/shared_modules/utils/CMakeLists.txt
+++ b/src/shared_modules/utils/CMakeLists.txt
@@ -2,4 +2,7 @@ cmake_minimum_required(VERSION 3.12.4)
 
 
 add_subdirectory(tests)
-add_subdirectory(benchmark)
+
+if(NOT ((CMAKE_C_COMPILER MATCHES ".*ccc-analyzer") OR (CMAKE_CXX_COMPILER MATCHES ".*c\\+\\+-analyzer")))
+  add_subdirectory(benchmark)
+endif()
